# obstacle_stop_planner_refine

./: .gitignore  .isort.cfg  README.md  build_depends.repos  code-metrics.html  codecov.yml  index.html  lizard_only_wo_test.html  mkdocs.yml  package_coverage.sh
.github/codeql/: codeql-config.yml
.github/workflows/: action-ros-ci-with-setup-ros.yml  action-ros-ci.yml  build_and_test.yml  code_metrics_main.yml  code_metrics_pr.yml  codeql-analysis.yml  comment_pr.yml  create_index.yml  deploy_code_metrics.yml  industrial_ci.yml  mkdocs.yml  nightly_build_and_test.yml  nightly_clang_build.yml
ament_cmake_auto_gtest/: README.md
ament_cmake_auto_gtest/cmake/: ament_auto_add_gtest.cmake
obstacle_stop_planner_nodes_refine/: CMakeLists.txt  package.xml
obstacle_stop_planner_nodes_refine/include/obstacle_stop_planner_nodes/: obstacle_stop_planner_node.hpp  visibility_control.hpp
obstacle_stop_planner_nodes_refine/launch/: obstacle_stop_planner.launch.xml
obstacle_stop_planner_nodes_refine/src/: obstacle_stop_planner_node.cpp
obstacle_stop_planner_nodes_refine/test/: obstacle_stop_planner_node_launch_test.py  test_obstacle_stop_planner_node.cpp
obstacle_stop_planner_refine/: CMakeLists.txt  README.md  package.xml
obstacle_stop_planner_refine/config/: obstacle_stop_planner.param.yaml
obstacle_stop_planner_refine/design/: class_diagram.pu  design.md
obstacle_stop_planner_refine/include/obstacle_stop_planner/: adaptive_cruise_control.hpp  debug_marker.hpp  node.hpp  obstacle_point_cloud.hpp  obstacle_stop_planner.hpp  one_step_polygon.hpp  param.hpp  point_helper.hpp  polygon.hpp  trajectory.hpp  util.hpp  vehicle.hpp  visibility_control.hpp
obstacle_stop_planner_refine/include/obstacle_stop_planner/control/: adaptive_cruise_control.hpp  slow_down_control.hpp  stop_control.hpp
obstacle_stop_planner_refine/include/obstacle_stop_planner/parameter/: adaptive_cruise_control_parameter.hpp  slow_down_control_parameter.hpp
obstacle_stop_planner_refine/include/obstacle_stop_planner/util/: create_vehicle_footprint.hpp  obstacle_point_cloud.hpp  one_step_polygon.hpp  point_helper.hpp  trajectory.hpp  util.hpp
obstacle_stop_planner_refine/launch/: obstacle_stop_planner.launch.xml
obstacle_stop_planner_refine/src/: adaptive_cruise_control.cpp  debug_marker.cpp  main.cpp  node.cpp  obstacle_point_cloud.cpp  obstacle_stop_planner.cpp  point_helper.cpp  trajectory.cpp
obstacle_stop_planner_refine/src/controller/: adaptive_cruise_control.cpp  slow_down_control.cpp  stop_control.cpp
obstacle_stop_planner_refine/test/: obstacle_stop_planner_node_launch_test.py
obstacle_stop_planner_refine/test/cmake/: ament_cmake_auto_gtest-extras.cmake
obstacle_stop_planner_refine/test/src/: test_create_vehicle_footprint.cpp  test_node.cpp  test_obstacle_stop_planner.cpp  test_one_step_polygon.cpp  test_point_helper.cpp  test_util.cpp
pr-check/: -code-metrics.html  10-code-metrics.html  11-code-metrics.html  12-code-metrics.html  13-code-metrics.html  14-code-metrics.html  2-code-metrics.html  3-code-metrics.html  4-code-metrics.html  5-code-metrics.html  6-code-metrics.html  7-code-metrics.html  8-code-metrics.html  9-code-metrics.html  index.html  main-code-metrics.html
pr-check/main/: code-metrics.html
pr-check/main/site/: 404.html  index.html
pr-check/main/site/ament_cmake_auto_gtest/: index.html
pr-check/main/site/obstacle_stop_planner_refine/: index.html
pr-check/pr-28/: code-metrics.html
pr-check/pr-29/: code-metrics.html
pr-check/pr-29/site/: 404.html  index.html
pr-check/pr-29/site/ament_cmake_auto_gtest/: index.html
pr-check/pr-30/: code-metrics.html
pr-check/pr-30/site/: 404.html  index.html
pr-check/pr-30/site/ament_cmake_auto_gtest/: index.html
pr-check/pr-30/site/obstacle_stop_planner_refine/: index.html
pr-check/pr-30/site/search/: search_index.json
pr-check/pr-31/: code-metrics.html
pr-check/pr-33/: code-metrics.html
pr-check/pr-34/: code-metrics.html
pr-check/pr-34/site/obstacle_stop_planner_refine/: package.xml
pr-check/pr-36/: code-metrics.html
pr-check/pr-37/: code-metrics.html
pr-check/pr-38/: code-metrics.html
pr-check/pr-38/site/: 404.html
pr-check/pr-39/: code-metrics.html
pr-check/pr-39/site/: index.html
pr-check/pr-39/site/ament_cmake_auto_gtest/: index.html
pr-check/pr-39/site/search/: search_index.json
pr-check/pr15/: code-metrics.html
pr-check/pr16/: code-metrics.html
pr-check/pr17/: code-metrics.html
pr-check/pr19/: code-metrics.html
pr-check/pr19/site/: 404.html  index.html
pr-check/pr19/site/obstacle_stop_planner_refine/: CMakeLists.txt
pr-check/pr20/: code-metrics.html
pr-check/pr21/: code-metrics.html
pr-check/pr21/site/: index.html
pr-check/pr21/site/obstacle_stop_planner_refine/: index.html  package.xml
pr-check/pr22/: code-metrics.html
pr-check/pr22/site/: 404.html
pr-check/pr22/site/search/: search_index.json
pr-check/pr23/: code-metrics.html
pr-check/pr23/site/: sitemap.xml
pr-check/pr24/: code-metrics.html
pr-check/pr24/site/obstacle_stop_planner_refine/: index.html
pr-check/pr24/site/scripts/: package_coverage.sh
pr-check/pr25/: code-metrics.html
pr-check/pr26/: code-metrics.html
pr-check/pr27/: code-metrics.html
pr-check/pr3/: code-metrics.html
pr-check/pr3/site/: 404.html  index.html
pr-check/pr3/site/ament_cmake_auto_gtest/: index.html
pr-check/pr3/site/obstacle_stop_planner_refine/: CMakeLists.txt  index.html
pr-check/pr3/site/obstacle_stop_planner_refine/include/obstacle_stop_planner/: one_step_polygon.hpp
pr-check/pr3/site/obstacle_stop_planner_refine/test/: obstacle_stop_planner_node_launch_test.py
pr-check/pr3/site/obstacle_stop_planner_refine/test/src/: test_obstacle_stop_planner.cpp  test_obstacle_stop_planner_node.cpp
pr-check/pr6/: code-metrics.html
pr-check/pr6/site/: index.html
pr-check/prnull/site/: 404.html  index.html
pr-check/prnull/site/obstacle_stop_planner_refine/: index.html
pr-check/prnull/site/search/: search_index.json
scripts/: install_mkdocs.sh  package_coverage.sh
(+42 files in other folders)
